Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ html,body {
     <a class="link" href="https://instagram.com/ahmet.tanriverdiii" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"> ahmet.tanriverdiii
     </a>
-    <a class="link" href="https://instagram.com/ahmet.tn7" target="_blank">
+    <a class="link" href="https://www.instagram.com/ahmettnvrdi?igsh=YWowaTRxams3c2xj" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"> ahmet.tn7
     </a>
     <a class="link" href="https://x.com/AhmetUt65114282" target="_blank">
@@ -226,4 +226,5 @@ blurOverlay.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
