--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ html,body {
     <a class="link" href="https://instagram.com/ahmet.tanriverdiii" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"> ahmet.tanriverdiii
     </a>
-    <a class="link" href="https://www.instagram.com/ahmettnvrdi?igsh=YWowaTRxams3c2xj" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"> ahmet.tn7
+    <a class="link" href="https://www.instagram.com/ahmettnvrdi" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"> ahmettnvrdi
     </a>
     <a class="link" href="https://x.com/AhmetUt65114282" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png"> couple06
@@ -226,5 +226,6 @@ blurOverlay.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
